# syncpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/channel_example/: CMakeLists.txt  main.cpp
examples/rw_lock_example/: CMakeLists.txt  main.cpp
examples/storing_mutex_example/: CMakeLists.txt  main.cpp
include/sync/: storing_mutex.hpp
include/syncpp/: channel.hpp  rw_lock.hpp  storing_mutex.hpp
include/syncpp/details/: scope_action.hpp
include/syncpp/private/: scoped_action.hpp
